<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemCV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_CV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblNameCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/margin_CV"
                    android:layout_marginTop="@dimen/margin_CV"
                    android:layout_toStartOf="@+id/lblEmailCV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@tools:sample/full_names" />

                <TextView
                    android:id="@+id/lblEmailCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lblPhonenumberCV"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/margin_CV"
                    android:layout_marginTop="@dimen/margin_CV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblNameCV"
                    tools:text="@sample/users.json/users/email" />

                <TextView
                    android:id="@+id/lblPhonenumberCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/margin_CV"
                    android:layout_marginTop="@dimen/margin_CV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblEmailCV"
                    tools:text="@sample/users.json/users/phonenumber" />

                <ImageView
                    android:id="@+id/imgUserCV"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/margin_CV"
                    android:adjustViewBounds="false"
                    android:cropToPadding="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/btnEdit"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.47"
                    app:srcCompat="@drawable/cat1"
                    android:contentDescription="@string/contentDescriptionUserCV" />

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_btn_CV"
                    android:layout_marginStart="@dimen/margin_CV"
                    android:layout_marginTop="@dimen/margin_CV"
                    android:text="@string/btnEdit"
                    app:layout_constraintStart_toEndOf="@+id/btnDelete"
                    app:layout_constraintTop_toBottomOf="@+id/lblPhonenumberCV" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_btn_CV"
                    android:layout_marginStart="@dimen/margin_CV"
                    android:text="@string/btnDelete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>